16_subseq/grade.txt
Grading at Tue Jun 12 20:00:03 UTC 2018
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:11:7: error: unused variable ‘long_seq’ [-Werror=unused-variable]
   int long_seq = 0;
       ^
cc1: all warnings being treated as errors
The code did not compile!

Overall Grade: F
